1. mariadb-java-client 版本改為 3.0.6，因應AWS。 2. MR 新增申報點數。 3. 新增違反支付準則-調劑費、麻醉費、輸血及骨髓移植費、精神醫療治療費、品質支付服務、放射線診療費、復健治療費、特定診療檢查費、注射費、藥費、不分類。